--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit
-opencv-python-headless==4.8.1.78
-fer==22.5.1
-tensorflow==2.15.0
-mtcnn==0.1.1
-pillow==10.2.0
-numpy==1.26.4
-moviepy==1.0.3
-decorator==4.4.2
+fer
+opencv-python-headless
+tensorflow-cpu
+mtcnn
+pillow
+numpy<2.0.0
+moviepy
+decorator
