--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit
-fer
+fer==22.5.1
 opencv-python-headless
-tensorflow-cpu
-mtcnn
-pillow
+tensorflow-cpu==2.15.0
+mtcnn==0.1.1
+pillow==10.2.0
 numpy<2.0.0
-moviepy
-decorator
+moviepy==1.0.3
+decorator==4.4.2
